80.fix fix subtitle spacing

--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ header {
     width: 40px; height: 40px;
 }
 
-h2 {
+h2, .title {
     display: -webkit-box;
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
@@ -83,6 +83,13 @@ h2 {
     margin-bottom: 30px;
     line-height: 1.08;
     letter-spacing: -0.75px;
+}
+
+.subtitle {
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 h3 {
@@ -171,6 +178,7 @@ button {
     font-size: 20px;
     line-height: 1.5;
     font-weight: 300;
+    max-width: 640px;
 }
 
 .start-screen{
